[package]
name = "lingon"
version = "0.1.0"
authors = ["Edvard Thörnros <edvard.thornros@gmail.com>"]
edition = "2018"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

bundled = ["luminance-sdl2/bundled"]

[dependencies]
# NOTE(ed): These version numbers are very precise, cargo tree is your friend.
cgmath = "0.18.0"
lazy_static = "1"
lingon_macro = { path = "lingon_macro" }
luminance = "0.43.2"
luminance-derive = "0.6.1"
luminance-sdl2 = { version = "0.2.1", default-features = false }
luminance-windowing = "0.9.3"
stb_image = "0.2.2"
sungod = "0.3"
wav = "0.6"
